<resources>
    <string name="app_name">凯润运动</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="toolbar_title">首页</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pull_to_refresh">下拉可以刷新</string>

    <string name="release_to_refresh">释放立即刷新</string>

    <string name="refreshing">正在刷新…</string>

    <string name="not_updated_yet">暂未更新过</string>

    <string name="updated_at">上次更新于%1$s前</string>

    <string name="updated_just_now">刚刚更新</string>

    <string name="time_error">时间有问题</string>

    <string name="loading">同步更新……</string>

    <string name="default_unlockequipment">未绑定设备</string>

    <string name="default_jiuzuotixing">久坐提醒</string>

    <string name="default_fullonehouse">坐满一小时后提醒</string>

    <string name="default_bluetoochoff">蓝牙断开提醒</string>

    <string name="default_alarmclock">闹钟设置</string>

    <string name="default_xinlvjianc">心率监测</string>

    <string name="default_kaiqi">开启</string>

    <string name="default_fanwanliangp">翻腕亮屏</string>

    <string name="default_messagenotuce">消息通知</string>

    <string name="default_shouhuanyuyanshezhi">手环语言设置</string>

    <string name="default_yanshizipai">延时自拍</string>

    <string name="default_shebeigengxin">设备更新</string>

    <string name="default_huifuchuchangshezhi">恢复出厂设置</string>

    <string name="default_name">昵称:曾嵘</string>

    <string name="default_sex">性别:男</string>

    <string name="default_exit">退出账号</string>

    <string name="default_sport">运动</string>

    <string name="default_sleep">睡眠</string>

    <string name="default_sharp">分享</string>

    <string name="default_mouth_Statistics">月统计</string>
</resources>
