<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav_right"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    android:background="@color/colorDrawer"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <cn.kairun.kairunsport.myview.CircleImageView
                android:id="@+id/iv_icon"
                android:layout_width="@dimen/x80"
                android:layout_height="@dimen/x80"
                android:layout_centerVertical="true"
                android:src="@drawable/face" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/iv_icon"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/default_name"
                    android:textColor="@color/colorwhite"
                    android:textSize="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/default_sex"
                    android:textColor="@color/colorwhite"
                    android:textSize="10dp" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

    <ListView
        android:id="@+id/lv_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:divider="#00000000"
        android:dividerHeight="0dip">
    </ListView>

    <RelativeLayout
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:background="@drawable/exitsharp"
            android:layout_centerInParent="true"
            android:textColor="@color/colorwhite"
            android:text="@string/default_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>
