<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/ab_layout"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <ImageView
                    android:id="@+id/iv_exit"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/whitexiaojiantou" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_sport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="40dp"
                        android:text="@string/default_sport"
                        android:textColor="@color/colorwhite" />

                    <TextView
                        android:id="@+id/tv_sleep"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:text="@string/default_sleep"
                        android:textColor="@color/colorwhite" />
                </LinearLayout>

            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/tv_data"
        android:layout_below="@id/ab_layout"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/totaldatasharp"
        android:gravity="center"
        android:text="2016-4-1"
        android:textColor="@color/colorBlue" />

    <!--主布局-->
    <RelativeLayout
        android:layout_below="@id/tv_data"
        android:id="@+id/id_content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/buttomtoolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/tv_sharp"
            android:textColor="@color/colorwhite"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/default_sharp" />
        <TextView
            android:id="@+id/tv_mouth_statistics"
            android:layout_width="0dp"
            android:textColor="@color/colorwhite"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/default_mouth_Statistics"/>
    </LinearLayout>
</RelativeLayout>
